<<<<<<< Updated upstream
[gd_scene load_steps=32 format=3 uid="uid://b57uspbprxc8"]
=======
[gd_scene load_steps=43 format=3 uid="uid://b57uspbprxc8"]
>>>>>>> Stashed changes

[ext_resource type="Script" path="res://scripts/world.gd" id="1_ho7yh"]
[ext_resource type="PackedScene" uid="uid://bd3ai1v40ssao" path="res://map.tscn" id="3_fd0sg"]
[ext_resource type="Script" path="res://scripts/ui/fps_counter.gd" id="4_2328u"]
[ext_resource type="Script" path="res://scripts/ui/menu/host_button.gd" id="4_nuahp"]
[ext_resource type="Shader" path="res://scripts/shaders/blur.gdshader" id="4_p7mxg"]
[ext_resource type="AudioStream" uid="uid://p6uvqtljqic7" path="res://audio/661248__magmadiverrr__video-game-menu-music.ogg" id="4_taatn"]
[ext_resource type="Script" path="res://scripts/ui/menu/options/fullscreen.gd" id="5_abwkb"]
[ext_resource type="Script" path="res://scripts/ui/menu/options/mouse_sensitivity.gd" id="6_00vww"]
[ext_resource type="Script" path="res://scripts/ui/menu/options/back.gd" id="6_2hany"]
[ext_resource type="Script" path="res://scripts/ui/menu/options_button.gd" id="6_7g7sm"]
[ext_resource type="Script" path="res://textures/kenney_particle_pack/resume.gd" id="7_5cdyw"]
[ext_resource type="Script" path="res://scripts/ui/menu/options/controller_sensitivity.gd" id="7_jhf7u"]
[ext_resource type="Script" path="res://scripts/ui/menu/pause/quit.gd" id="9_ucmny"]
<<<<<<< Updated upstream
[ext_resource type="Texture2D" uid="uid://bgklmfdyr46we" path="res://imports/Images/MenuBackground.jpg" id="12_e6nrb"]
[ext_resource type="Script" path="res://match_timer.gd" id="15_bmgrk"]
=======
[ext_resource type="Texture2D" uid="uid://drfk6nf14r5c7" path="res://imports/Images/output-onlinepngtools (1).png" id="12_nlu12"]
>>>>>>> Stashed changes

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_r06yd"]
energy_multiplier = 1.25

[sub_resource type="Sky" id="Sky_78err"]
sky_material = SubResource("PhysicalSkyMaterial_r06yd")

[sub_resource type="Environment" id="Environment_v7lsv"]
background_mode = 2
sky = SubResource("Sky_78err")
tonemap_mode = 2
tonemap_white = 6.0
glow_blend_mode = 4
fog_enabled = true
fog_sun_scatter = 0.17
fog_density = 0.0099
fog_aerial_perspective = 1.0

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_wntx8"]

[sub_resource type="Animation" id="Animation_ug7wi"]
resource_name = "Dolly"
length = 120.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../DollyCamera:position:z")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0.659, -0.25, 0, 0.25, 0, -14.157, -0.25, 0, 0.25, 0, 13.2434, -0.25, 0, 0.25, 0, 0.659, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 30.0667, 89.9333, 120)
}

[sub_resource type="Animation" id="Animation_ei2s0"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../DollyCamera:position:z")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(13.2434, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lekn2"]
_data = {
"Dolly": SubResource("Animation_ug7wi"),
"RESET": SubResource("Animation_ei2s0")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nou27"]
shader = ExtResource("4_p7mxg")
shader_parameter/blur_amount = 2.0
shader_parameter/mix_amount = 0.0
shader_parameter/color_over = null

[sub_resource type="Theme" id="Theme_utqnk"]

[sub_resource type="SystemFont" id="SystemFont_mp268"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_3qyju"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_7o4o8"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_qetnr"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_3ntqe"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_mmfit"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_lou0o"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_owxas"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_hxgt0"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_tlr21"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_g2sue"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_xtqbf"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_646io"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_jbnoj"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_o1uwk"]
font_names = PackedStringArray("Impact")
font_italic = true
oversampling = 2.1

[sub_resource type="SystemFont" id="SystemFont_yxgyo"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_q4ll2"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_ote55"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_oena7"]
font_names = PackedStringArray("Impact")

[node name="World" type="Node"]
script = ExtResource("1_ho7yh")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_v7lsv")
camera_attributes = SubResource("CameraAttributesPractical_wntx8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.835807, -0.47011, 0.283589, -0.375944, 0.866496, 0.328406, -0.400115, 0.167871, -0.900959, 0, 4.88489, 0)
light_temperature = 4300.0
light_energy = 5.0
shadow_enabled = true
shadow_bias = 0.0
directional_shadow_split_1 = 0.04
directional_shadow_split_2 = 0.11
directional_shadow_split_3 = 0.33
directional_shadow_blend_splits = true
directional_shadow_max_distance = 99.3

[node name="FpsCounter" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("4_2328u")

[node name="map" parent="." instance=ExtResource("3_fd0sg")]

[node name="Menu" type="CanvasLayer" parent="."]

[node name="MenuMusic" type="AudioStreamPlayer" parent="Menu"]
unique_name_in_owner = true
stream = ExtResource("4_taatn")
volume_db = -20.0
autoplay = true
bus = &"Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu"]
root_node = NodePath("../Blur")
libraries = {
"": SubResource("AnimationLibrary_lekn2")
}
autoplay = "Dolly"

[node name="Blur" type="ColorRect" parent="Menu"]
material = SubResource("ShaderMaterial_nou27")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DollyCamera" type="Camera3D" parent="Menu"]
transform = Transform3D(-1, 0, 8.74228e-08, 3.24314e-09, 0.999312, 0.0370972, -8.73626e-08, 0.0370972, -0.999312, 0, 0.702964, 13.2434)

[node name="Options" type="PanelContainer" parent="Menu"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 274.0
offset_top = -158.0
offset_right = 544.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_utqnk")

[node name="MarginContainer" type="MarginContainer" parent="Menu/Options"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Options/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="OptionsLabel" type="Label" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_mp268")
theme_override_font_sizes/font_size = 16
text = "Options
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fullscreen" type="CheckButton" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_3qyju")
theme_override_font_sizes/font_size = 16
text = "Fullscreen"
script = ExtResource("5_abwkb")

[node name="FpsCounter" type="CheckButton" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_7o4o8")
theme_override_font_sizes/font_size = 16
text = "FPS counter"

[node name="Ping" type="CheckButton" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Shows connection trip time to host (in milliseconds)"
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_qetnr")
theme_override_font_sizes/font_size = 16
text = "View Ping"

[node name="SensitivityLabel" type="Label" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_3ntqe")
theme_override_font_sizes/font_size = 16
text = "Sensitivity"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_mmfit")
theme_override_font_sizes/font_size = 16
text = "Mouse sensitivity"

[node name="MouseSensitivity" type="HSlider" parent="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.001
max_value = 0.1
step = 0.001
value = 0.005
script = ExtResource("6_00vww")

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_lou0o")
theme_override_font_sizes/font_size = 16
text = "Controller sensitivity"

[node name="ControllerSensitivity" type="HSlider" parent="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.001
max_value = 0.1
step = 0.001
value = 0.01
script = ExtResource("7_jhf7u")

[node name="Back" type="Button" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 18
theme_override_fonts/font = SubResource("SystemFont_owxas")
theme_override_font_sizes/font_size = 18
text = "Back"
script = ExtResource("6_2hany")

[node name="PauseMenu" type="PanelContainer" parent="Menu"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -88.0
offset_right = 174.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu/PauseMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PauseMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="PauseLabel" type="Label" parent="Menu/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 9
theme_override_constants/shadow_offset_y = 9
theme_override_constants/outline_size = 15
theme_override_fonts/font = SubResource("SystemFont_hxgt0")
theme_override_font_sizes/font_size = 18
text = "Pause Menu
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="Menu/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_tlr21")
theme_override_font_sizes/font_size = 16
text = "Resume"
script = ExtResource("7_5cdyw")

[node name="Options" type="Button" parent="Menu/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_g2sue")
theme_override_font_sizes/font_size = 16
text = "Options
"

[node name="Quit" type="Button" parent="Menu/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_xtqbf")
theme_override_font_sizes/font_size = 16
text = "Quit"
script = ExtResource("9_ucmny")

[node name="MainMenu" type="PanelContainer" parent="Menu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.5
offset_top = -188.0
offset_right = 204.5
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Menu/MainMenu"]
layout_mode = 2
texture = ExtResource("12_nlu12")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="Menu/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MainMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="MainMenuLabel" type="Label" parent="Menu/MainMenu/MarginContainer/VBoxContainer"]
modulate = Color(0.69, 0.468625, 0.3105, 1)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("SystemFont_646io")
theme_override_font_sizes/font_size = 23
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="Menu/MainMenu/MarginContainer/VBoxContainer"]
modulate = Color(0.94, 0.657217, 0.047, 1)
layout_mode = 2
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("SystemFont_jbnoj")
theme_override_font_sizes/font_size = 17
text = "Host"
script = ExtResource("4_nuahp")

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AddressEntry" type="LineEdit" parent="Menu/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 0.6625, 0.19, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 20
theme_override_constants/caret_width = 0
theme_override_fonts/font = SubResource("SystemFont_o1uwk")
theme_override_font_sizes/font_size = 17
placeholder_text = "Lobby's address:"
alignment = 1
flat = true

[node name="JoinButton" type="Button" parent="Menu/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(0.94, 0.657217, 0.047, 1)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("SystemFont_yxgyo")
theme_override_font_sizes/font_size = 15
text = "  Join  "

[node name="OptionsButton" type="Button" parent="Menu/MainMenu/MarginContainer/VBoxContainer"]
modulate = Color(0.94, 0.657217, 0.047, 1)
layout_mode = 2
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("SystemFont_q4ll2")
theme_override_font_sizes/font_size = 16
toggle_mode = true
text = "Options"
script = ExtResource("6_7g7sm")

[node name="Quit" type="Button" parent="Menu/MainMenu/MarginContainer/VBoxContainer"]
modulate = Color(0.69, 0.468625, 0.3105, 1)
layout_mode = 2
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("SystemFont_ote55")
theme_override_font_sizes/font_size = 17
text = "Quit"
script = ExtResource("9_ucmny")

[node name="MusicToggle" type="CheckButton" parent="Menu/MainMenu"]
unique_name_in_owner = true
modulate = Color(1, 0.848333, 0.74, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("SystemFont_oena7")
button_pressed = true
text = "Music"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("..")

[node name="MatchTimer" type="Timer" parent="."]
script = ExtResource("15_bmgrk")

[node name="MatchTimerLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
horizontal_alignment = 1

[connection signal="toggled" from="Menu/Options/MarginContainer/VBoxContainer/FpsCounter" to="FpsCounter" method="_on_fps_counter_toggled"]
[connection signal="toggled" from="Menu/Options/MarginContainer/VBoxContainer/Ping" to="FpsCounter" method="_on_ping_toggled"]
[connection signal="value_changed" from="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer/MouseSensitivity" to="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer/MouseSensitivity" method="_on_value_changed"]
[connection signal="value_changed" from="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer2/ControllerSensitivity" to="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer2/ControllerSensitivity" method="_on_value_changed"]
[connection signal="pressed" from="Menu/Options/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Menu/Options/MarginContainer/VBoxContainer/Back" to="Menu/PauseMenu/MarginContainer/VBoxContainer/Options" method="_on_back_pressed"]
[connection signal="pressed" from="Menu/Options/MarginContainer/VBoxContainer/Back" to="Menu/MainMenu/MarginContainer/VBoxContainer/OptionsButton" method="_on_back_pressed"]
[connection signal="pressed" from="Menu/PauseMenu/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Menu/PauseMenu/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Menu/MainMenu/MarginContainer/VBoxContainer/HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="toggled" from="Menu/MainMenu/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_toggled"]
[connection signal="toggled" from="Menu/MainMenu/MarginContainer/VBoxContainer/OptionsButton" to="Menu/Options/MarginContainer/VBoxContainer/Fullscreen" method="_on_options_button_toggled"]
[connection signal="toggled" from="Menu/MainMenu/MusicToggle" to="." method="_on_music_toggle_toggled"]
